--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,11 @@
             <artifactId>flatlaf</artifactId>
             <version>3.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.lgooddatepicker</groupId>
+            <artifactId>LGoodDatePicker</artifactId>
+            <version>11.2.1</version>
+        </dependency>
         <dependency>
             <groupId>com.formdev</groupId>
             <artifactId>flatlaf-extras</artifactId>
